Added basic structure of header section

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,16 @@ body {
   text-transform: capitalize;
 }
 
+.wrapper {
+  margin: 0 auto;
+  max-width: 1200px;
+  width: 100%;
+}
+
+.section-padding {
+  padding: 4rem;
+}
+
 .navbar {
   align-items: center;
   background: #fff;
