--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -15,6 +15,20 @@ body {
 	text-transform: capitalize;
 }
 
+.wrapper {
+	margin: 0 auto;
+	max-width: 1200px;
+	width: 100%;
+}
+// ========== SECTION STARTS ==========
+.section {
+	&-padding {
+		padding: 4rem;
+	}
+}
+
+// ========== SECTION ENDS ==========
+
 // ========== NAVIGATION STARTS ==========
 .navbar {
 	align-items: center;
@@ -94,3 +108,7 @@ body {
 }
 
 // ========== NAVIGATION ENDS ==========
+
+// ========== HEADER STARTS ==========
+
+// ========== HEADER ENDS ==========
