--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ html {
 }
 
 :root {
-  scroll-padding-top: 44.6px;
+  scroll-padding-top: 72px;
 }
 
 body {
@@ -42,7 +42,7 @@ body {
 .navbar {
   align-items: center;
   background: #fff;
-  border-radius: 5rem;
+  border-radius: 1rem;
   display: flex;
   left: 50%;
   padding: 1rem 2rem;
@@ -111,8 +111,9 @@ body {
 }
 
 .home {
-  min-height: 100vh;
   display: flex;
+  flex-flow: column;
+  min-height: 100vh;
   align-items: center;
   justify-content: space-around;
   position: relative;
@@ -125,6 +126,66 @@ body {
   object-fit: cover;
   z-index: -1;
   width: 100%;
+}
+.home__content-title {
+  text-align: center;
+  margin-top: 7rem;
+  font-size: 5rem;
+  color: #fff;
+  text-shadow: 0 0.3rem 0.5rem #333;
+}
+.home__content-text {
+  font-size: 2rem;
+  color: #fff;
+  text-shadow: 0 0.3rem 0.5rem #333;
+  padding-left: 2rem;
+  border-left: 0.3rem solid #ddd;
+}
+.home__content__form-panel {
+  margin-top: 8rem;
+  padding: 2rem;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.9);
+  border-radius: 0.5rem;
+}
+.home__content__form-title {
+  color: #333;
+  font-size: 3rem;
+  text-align: center;
+}
+.home__content__form-text {
+  color: #0098a1;
+  font-size: 2.5rem;
+  margin: 0.5rem 0;
+  display: block;
+}
+.home__content__form-location, .home__content__form-members, .home__content__form-date, .home__content__form-btn {
+  width: 100%;
+  padding: 0 1rem;
+  height: 4rem;
+  font-size: 1.5rem;
+  background: #eee;
+  border: none;
+  color: #333;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
+  outline: none;
+  border-radius: 0.5rem;
+}
+.home__content__form-btn {
+  width: 10rem;
+  color: #fff;
+  background: #0098a1;
+  cursor: pointer;
+  font-size: 2rem;
+  margin-top: 2rem;
+  transition: 0.3s;
+  text-transform: capitalize;
+}
+.home__content__form-btn:hover {
+  border: 0.2rem solid #0098a1;
+  color: #0098a1;
+  background: none;
 }
 
 @media (min-width: 768px) {
