--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -7,7 +7,7 @@ html {
 }
 
 :root {
-	scroll-padding-top: 44.6px;
+	scroll-padding-top: 72px;
 }
 
 body {
@@ -33,7 +33,7 @@ body {
 .navbar {
 	align-items: center;
 	background: $pure-white;
-	border-radius: 5rem;
+	border-radius: 1rem;
 	display: flex;
 	left: 50%;
 	padding: 1rem 2rem;
@@ -112,8 +112,9 @@ body {
 // ========== HEADER STARTS ==========
 
 .home {
-	min-height: 100vh;
 	display: flex;
+	flex-flow: column;
+	min-height: 100vh;
 	align-items: center;
 	justify-content: space-around;
 	position: relative;
@@ -127,6 +128,79 @@ body {
 			object-fit: cover;
 			z-index: -1;
 			width: 100%;
+		}
+	}
+
+	&__content {
+		&-title {
+			text-align: center;
+			margin-top: 7rem;
+			font-size: 5rem;
+			color: $pure-white;
+			text-shadow: 0 0.3rem 0.5rem $dark;
+		}
+
+		&-text {
+			font-size: 2rem;
+			color: $pure-white;
+			text-shadow: 0 0.3rem 0.5rem $dark;
+			padding-left: 2rem;
+			border-left: 0.3rem solid #ddd;
+		}
+
+		&__form {
+			&-panel {
+				margin-top: 8rem;
+				padding: 2rem;
+				width: 100%;
+				background-color: $pure-white;
+				box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.9);
+				border-radius: 0.5rem;
+			}
+			&-title {
+				color: $dark;
+				font-size: 3rem;
+				text-align: center;
+			}
+			&-text {
+				color: $main-colour;
+				font-size: 2.5rem;
+				margin: 0.5rem 0;
+				display: block;
+			}
+
+			&-location,
+			&-members,
+			&-date,
+			&-btn {
+				width: 100%;
+				padding: 0 1rem;
+				height: 4rem;
+				font-size: 1.5rem;
+				background: #eee;
+				border: none;
+				color: $dark;
+				box-shadow: 0 0.1rem 0.3rem $shadow;
+				outline: none;
+				border-radius: 0.5rem;
+			}
+
+			&-btn {
+				width: 10rem;
+				color: $pure-white;
+				background: $main-colour;
+				cursor: pointer;
+				font-size: 2rem;
+				margin-top: 2rem;
+				transition: 0.3s;
+				text-transform: capitalize;
+			}
+
+			&-btn:hover {
+				border: 0.2rem solid $main-colour;
+				color: $main-colour;
+				background: none;
+			}
 		}
 	}
 }
