--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ body {
 }
 
 .section-padding {
-  padding: 4rem;
+  padding: 2rem;
 }
 
 .navbar {
@@ -111,12 +111,12 @@ body {
 }
 
 .home {
+  position: relative;
+  min-height: 100vh;
   display: flex;
   flex-flow: column;
-  min-height: 100vh;
   align-items: center;
   justify-content: space-around;
-  position: relative;
 }
 .home__bg-video {
   position: absolute;
@@ -128,7 +128,7 @@ body {
   width: 100%;
 }
 .home__content {
-  margin-top: 8rem;
+  margin-top: 7rem;
 }
 .home__content-title {
   text-align: center;
@@ -183,6 +183,7 @@ body {
   margin-top: 2rem;
   transition: 0.3s;
   text-transform: capitalize;
+  width: 100%;
 }
 .home__content__form-btn:hover {
   border: 0.2rem solid #0098a1;
@@ -209,5 +210,12 @@ body {
   }
   .navbar__icon {
     display: none;
+  }
+  .home {
+    flex-flow: row;
+  }
+  .home__content__form-panel {
+    width: 38rem;
+    margin-left: 1rem;
   }
 }/*# sourceMappingURL=main.css.map */
