--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -23,7 +23,7 @@ body {
 // ========== SECTION STARTS ==========
 .section {
 	&-padding {
-		padding: 4rem;
+		padding: 2rem;
 	}
 }
 
@@ -112,12 +112,12 @@ body {
 // ========== HEADER STARTS ==========
 
 .home {
+	position: relative;
+	min-height: 100vh;
 	display: flex;
 	flex-flow: column;
-	min-height: 100vh;
 	align-items: center;
 	justify-content: space-around;
-	position: relative;
 
 	&__bg {
 		&-video {
@@ -130,9 +130,8 @@ body {
 			width: 100%;
 		}
 	}
-
 	&__content {
-		margin-top: 8rem;
+		margin-top: 7rem;
 		&-title {
 			text-align: center;
 			font-size: 5rem;
@@ -194,6 +193,7 @@ body {
 				margin-top: 2rem;
 				transition: 0.3s;
 				text-transform: capitalize;
+				width: 100%;
 			}
 
 			&-btn:hover {
