Improved styles to header section and added some colours

--- a/sass/utilities/_colours.scss
+++ b/sass/utilities/_colours.scss
@@ -2,7 +2,8 @@
 
 $main-colour: #0098a1;
 $secondary-colour: #c63bfa;
-
+$light-white: #eee;
+$light-grey: #ddd;
 $pure-white: #fff;
 $dark: #333;
 
