--- a/css/main.css
+++ b/css/main.css
@@ -111,45 +111,45 @@ body {
 }
 
 .home {
-  position: relative;
-  min-height: 100vh;
+  align-items: center;
   display: flex;
   flex-flow: column;
-  align-items: center;
   justify-content: space-around;
+  min-height: 100vh;
+  position: relative;
 }
 .home__bg-video {
-  position: absolute;
-  top: 0;
   left: 0;
   height: 100%;
+  position: absolute;
   object-fit: cover;
-  z-index: -1;
+  top: 0;
   width: 100%;
+  z-index: -1;
 }
 .home__content {
   margin-top: 7rem;
 }
 .home__content-title {
-  text-align: center;
-  font-size: 5rem;
   color: #fff;
+  font-size: 5rem;
+  text-align: center;
   text-shadow: 0 0.3rem 0.5rem #333;
 }
 .home__content-text {
-  font-size: 2rem;
-  color: #fff;
-  text-shadow: 0 0.3rem 0.5rem #333;
-  padding-left: 2rem;
   border-left: 0.3rem solid #ddd;
+  color: #fff;
+  font-size: 2rem;
+  padding-left: 2rem;
+  text-shadow: 0 0.3rem 0.5rem #333;
 }
 .home__content__form-panel {
+  background-color: #fff;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.9);
   margin-top: 8rem;
   padding: 2rem;
   width: 100%;
-  background-color: #fff;
-  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.9);
-  border-radius: 0.5rem;
 }
 .home__content__form-title {
   color: #333;
@@ -158,37 +158,36 @@ body {
 }
 .home__content__form-text {
   color: #0098a1;
+  display: block;
   font-size: 2.5rem;
   margin: 0.5rem 0;
-  display: block;
 }
 .home__content__form-location, .home__content__form-members, .home__content__form-date, .home__content__form-btn {
-  width: 100%;
-  padding: 0 1rem;
-  height: 4rem;
-  font-size: 1.5rem;
   background: #eee;
   border: none;
-  color: #333;
-  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
-  outline: none;
   border-radius: 0.5rem;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
+  color: #333;
+  font-size: 1.5rem;
+  height: 4rem;
+  outline: none;
+  padding: 0 1rem;
+  width: 100%;
 }
 .home__content__form-btn {
-  width: 10rem;
   color: #fff;
   background: #0098a1;
   cursor: pointer;
   font-size: 2rem;
   margin-top: 2rem;
-  transition: 0.3s;
   text-transform: capitalize;
+  transition: 0.3s;
   width: 100%;
 }
 .home__content__form-btn:hover {
+  background: none;
   border: 0.2rem solid #0098a1;
   color: #0098a1;
-  background: none;
 }
 
 @media (min-width: 768px) {
@@ -217,5 +216,8 @@ body {
   .home__content__form-panel {
     width: 38rem;
     margin-left: 1rem;
+  }
+  .home__content__form-btn {
+    width: 50%;
   }
 }/*# sourceMappingURL=main.css.map */
