--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -112,49 +112,49 @@ body {
 // ========== HEADER STARTS ==========
 
 .home {
-	position: relative;
-	min-height: 100vh;
+	align-items: center;
 	display: flex;
 	flex-flow: column;
-	align-items: center;
 	justify-content: space-around;
+	min-height: 100vh;
+	position: relative;
 
 	&__bg {
 		&-video {
-			position: absolute;
-			top: 0;
 			left: 0;
 			height: 100%;
+			position: absolute;
 			object-fit: cover;
-			z-index: -1;
+			top: 0;
 			width: 100%;
+			z-index: -1;
 		}
 	}
 	&__content {
 		margin-top: 7rem;
 		&-title {
-			text-align: center;
-			font-size: 5rem;
 			color: $pure-white;
+			font-size: 5rem;
+			text-align: center;
 			text-shadow: 0 0.3rem 0.5rem $dark;
 		}
 
 		&-text {
-			font-size: 2rem;
+			border-left: 0.3rem solid $light-grey;
 			color: $pure-white;
-			text-shadow: 0 0.3rem 0.5rem $dark;
+			font-size: 2rem;
 			padding-left: 2rem;
-			border-left: 0.3rem solid #ddd;
+			text-shadow: 0 0.3rem 0.5rem $dark;
 		}
 
 		&__form {
 			&-panel {
+				background-color: $pure-white;
+				border-radius: 0.5rem;
+				box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.9);
 				margin-top: 8rem;
 				padding: 2rem;
 				width: 100%;
-				background-color: $pure-white;
-				box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.9);
-				border-radius: 0.5rem;
 			}
 			&-title {
 				color: $dark;
@@ -163,43 +163,42 @@ body {
 			}
 			&-text {
 				color: $main-colour;
+				display: block;
 				font-size: 2.5rem;
 				margin: 0.5rem 0;
-				display: block;
 			}
 
 			&-location,
 			&-members,
 			&-date,
 			&-btn {
-				width: 100%;
-				padding: 0 1rem;
-				height: 4rem;
-				font-size: 1.5rem;
-				background: #eee;
+				background: $light-white;
 				border: none;
-				color: $dark;
-				box-shadow: 0 0.1rem 0.3rem $shadow;
-				outline: none;
 				border-radius: 0.5rem;
+				box-shadow: 0 0.1rem 0.3rem $shadow;
+				color: $dark;
+				font-size: 1.5rem;
+				height: 4rem;
+				outline: none;
+				padding: 0 1rem;
+				width: 100%;
 			}
 
 			&-btn {
-				width: 10rem;
 				color: $pure-white;
 				background: $main-colour;
 				cursor: pointer;
 				font-size: 2rem;
 				margin-top: 2rem;
-				transition: 0.3s;
 				text-transform: capitalize;
+				transition: 0.3s;
 				width: 100%;
 			}
 
 			&-btn:hover {
+				background: none;
 				border: 0.2rem solid $main-colour;
 				color: $main-colour;
-				background: none;
 			}
 		}
 	}
