--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,22 @@ body {
 .section-padding {
   padding: 2rem;
 }
+.section-heading {
+  font-size: 4rem;
+  color: #0098a1;
+  text-align: center;
+  padding: 0 1rem;
+  padding-top: 6rem;
+  letter-spacing: 0.2rem;
+  font-weight: 500;
+}
+.section-title {
+  padding: 0 1rem;
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 400;
+  color: #ddd;
+}
 
 .navbar {
   align-items: center;
