--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -25,6 +25,24 @@ body {
 	&-padding {
 		padding: 2rem;
 	}
+
+	&-heading {
+		font-size: 4rem;
+		color: $main-colour;
+		text-align: center;
+		padding: 0 1rem;
+		padding-top: 6rem;
+		letter-spacing: 0.2rem;
+		font-weight: 500;
+	}
+
+	&-title {
+		padding: 0 1rem;
+		font-size: 2rem;
+		text-align: center;
+		font-weight: 400;
+		color: $light-grey;
+	}
 }
 
 // ========== SECTION ENDS ==========
@@ -205,3 +223,10 @@ body {
 }
 
 // ========== HEADER ENDS ==========
+
+// ========== MAIN STARS ==========
+
+// ========== FEATURES STARS ==========
+// ========== FEATURES ENDS ==========
+
+// ========== MAIN ENDS ==========
