--- a/sass/utilities/_colours.scss
+++ b/sass/utilities/_colours.scss
@@ -6,5 +6,8 @@ $light-white: #eee;
 $light-grey: #ddd;
 $pure-white: #fff;
 $dark: #333;
+$lighter-white: #f9f9f9;
+$star-colour: #ffd700;
+$discount: #ff3300;
 
 $shadow: rgba(0, 0, 0, 0.3);
