Added image to about section

--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -323,4 +323,12 @@ body {
 
 // ========== FEATURES ENDS ==========
 
+// ========== ABOUT STARTS ==========
+
+.about {
+	
+}
+
+// ========== ABOUT ENDS ==========
+
 // ========== MAIN ENDS ==========
