--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@ li {
   list-style: none;
 }
 
+button {
+  font-family: "Kalam", cursive;
+  text-transform: capitalize;
+}
+
 html {
   font-size: 55%;
   overflow-x: hidden;
@@ -282,6 +287,43 @@ body {
   background: none;
   border: 0.2rem solid #0098a1;
   color: #0098a1;
+}
+
+.about__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.about__box__image-img {
+  height: 65vh;
+  width: 90vw;
+}
+.about__box__content-title {
+  font-size: 4rem;
+  color: #0098a1;
+}
+.about__box__content-text {
+  font-size: 1.9rem;
+  color: #333;
+}
+.about__box__content__link-btn {
+  border: none;
+  cursor: pointer;
+  transition: 0.3s;
+  height: 4rem;
+  width: 18rem;
+  margin-top: 1rem;
+  background-color: #0098a1;
+  font-size: 2rem;
+  color: #fff;
+}
+.about__box__content__link-btn-more, .about__box__content__link-btn:hover {
+  background: none;
+  color: #0098a1;
+  border: 0.2rem solid #0098a1;
+  margin-right: 1rem;
 }
 
 @media (min-width: 768px) {
