--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -327,47 +327,49 @@ body {
 
 .about {
 	&__box {
+		align-items: center;
 		display: flex;
 		flex-direction: column;
-		align-items: center;
 		justify-content: center;
 		text-align: center;
 
 		&__image {
 			&-img {
-				height: 65vh;
-				width: 90vw;
+				height: 80vh;
+				width: 80vw;
 			}
 		}
 
 		&__content {
 			&-title {
-				font-size: 4rem;
 				color: $main-colour;
+				font-size: 4rem;
 			}
 			&-text {
-				font-size: 1.9rem;
 				color: $dark;
+				font-size: 1.9rem;
 			}
 
 			&__link {
 				&-btn {
-					border: none;
-					cursor: pointer;
-					transition: 0.3s;
-					height: 4rem;
-					width: 18rem;
-					margin-top: 1rem;
 					background-color: $main-colour;
-					font-size: 2rem;
+					border: none;
 					color: $pure-white;
+					cursor: pointer;
+					height: 4rem;
+					font-size: 2rem;
+					margin-top: 3rem;
+					transition: 0.3s;
+					width: 18rem;
+				}
+				&-btn-more {
+					margin-right: 1rem;
 				}
 				&-btn-more,
 				&-btn:hover {
 					background: none;
-					color: $main-colour;
 					border: 0.2rem solid $main-colour;
-					margin-right: 1rem;
+					color: $main-colour;
 				}
 			}
 		}
