--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -233,7 +233,7 @@ body {
 // ========== FEATURES STARS ==========
 
 .features {
-	background: $lighter-white;
+	background: $odd-section;
 
 	&__cards {
 		align-items: center;
@@ -253,7 +253,7 @@ body {
 		width: 30rem;
 
 		&-discount {
-			background: $discount;
+			background: $main-colour;
 			color: $pure-white;
 			display: block;
 			font-size: 2rem;
@@ -290,7 +290,7 @@ body {
 
 			&__stars {
 				&-star {
-					color: $star-colour;
+					color: $main-colour;
 					font-size: 2rem;
 					padding: 2rem 0.2rem;
 				}
@@ -378,5 +378,65 @@ body {
 }
 
 // ========== ABOUT ENDS ==========
+
+// ========== GALLERY STARTS ==========
+
+.gallery {
+	min-height: 100vh;
+	background: $odd-section;
+
+	&__container {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-wrap: wrap;
+
+		&__box {
+			height: 20rem;
+			width: 30rem;
+			margin: 2rem;
+			cursor: pointer;
+			overflow: hidden;
+			position: relative;
+
+			&-img {
+				object-fit: cover;
+				height: 100%;
+				width: 100%;
+			}
+
+			&__icons {
+				position: absolute;
+				top: 120%;
+				left: 0;
+				background: $image-gradient;
+				display: flex;
+				align-items: flex-end;
+				justify-content: space-around;
+				height: 100%;
+				width: 100%;
+				opacity: 0;
+				transition: 0.3s;
+
+				&__link {
+					color: $pure-white;
+					text-shadow: 0 0.1rem 0.3rem $dark;
+					font-size: 3rem;
+					padding-bottom: 2rem;
+				}
+
+				&__link:hover {
+					color: $main-colour;
+				}
+
+				&__link--active {
+					opacity: 1;top: 0;
+				}
+			}
+		}
+	}
+}
+
+// ========== GALLERY ENDS ==========
 
 // ========== MAIN ENDS ==========
