--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -234,6 +234,7 @@ body {
 
 .features {
 	background: $odd-section;
+	min-height: 100vh;
 
 	&__cards {
 		align-items: center;
@@ -326,6 +327,7 @@ body {
 // ========== ABOUT STARTS ==========
 
 .about {
+	min-height: 100vh;
 	&__box {
 		align-items: center;
 		display: flex;
@@ -383,45 +385,46 @@ body {
 
 .gallery {
 	background: $odd-section;
+	min-height: 100vh;
 
 	&__container {
-		display: flex;
 		align-items: center;
-		justify-content: center;
+		display: flex;
 		flex-wrap: wrap;
+		justify-content: center;
 
 		&__box {
-			height: 20rem;
-			width: 30rem;
-			margin: 2rem;
 			cursor: pointer;
+			height: 20rem;
+			margin: 2rem;
 			overflow: hidden;
 			position: relative;
+			width: 30rem;
 
 			&-img {
-				object-fit: cover;
 				height: 100%;
+				object-fit: cover;
 				width: 100%;
 			}
 
 			&__icons {
-				position: absolute;
-				top: 120%;
-				left: 0;
+				align-items: flex-end;
 				background: $image-gradient;
 				display: flex;
-				align-items: flex-end;
 				justify-content: space-around;
 				height: 100%;
-				width: 100%;
+				left: 0;
 				opacity: 0;
+				position: absolute;
+				top: 120%;
 				transition: 0.3s;
+				width: 100%;
 
 				&__link {
 					color: $pure-white;
-					text-shadow: 0 0.1rem 0.3rem $dark;
 					font-size: 3rem;
 					padding-bottom: 2rem;
+					text-shadow: 0 0.1rem 0.3rem $dark;
 				}
 
 				&__link:hover {
@@ -434,7 +437,6 @@ body {
 				top: 0;
 			}
 		}
-
 	}
 }
 
