--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -442,4 +442,86 @@ body {
 
 // ========== GALLERY ENDS ==========
 
+// ========== REVIEWS STARTS ==========
+
+.reviews {
+	align-items: center;
+	display: flex;
+	flex-flow: column;
+	justify-content: space-around;
+	position: relative;
+
+	&__heading {
+		color: $pure-white;
+	}
+	&__bg {
+		&-video {
+			left: 0;
+			height: 100%;
+			position: absolute;
+			object-fit: cover;
+			top: 0;
+			width: 100%;
+			z-index: -1;
+		}
+	}
+
+	&::after {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background: $strong-shadow;
+		z-index: -1;
+	}
+
+	&__container {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+		margin-top: 4rem;
+
+		&__box {
+			width: 35rem;
+			margin: 4rem 2rem;
+			padding-bottom: 2rem;
+			text-align: center;
+			box-shadow: 1rem 1rem 1rem $main-colour;
+			background: $pure-white;
+			border-radius: 1rem;
+			&__image {
+				margin-top: -5rem;
+
+				&-img {
+					height: 15rem;
+					width: 15rem;
+					border-radius: 50%;
+					object-fit: cover;
+					border: 0.7rem solid $pure-white;
+				}
+			}
+			&__content {
+				&-title {
+					font-size: 2.5rem;
+					color: $main-colour;
+				}
+				&-text {
+					font-size: 1.5rem;
+					color: $dark;
+					padding: 1rem;
+				}
+				&__stars {
+					&-star {
+						color: $main-colour;
+						font-size: 2rem;
+						padding: 2rem 0.2rem;
+					}
+				}
+			}
+		}
+	}
+}
+// ========== REVIEWS ENDS ==========
+
 // ========== MAIN ENDS ==========
