--- a/sass/utilities/_colours.scss
+++ b/sass/utilities/_colours.scss
@@ -10,6 +10,7 @@ $odd-section: #f9f9f9;
 
 
 $shadow: rgba(0, 0, 0, 0.3);
+$strong-shadow: rgba(0, 0, 0, 0.75);
 
 
 // ========== GRADIENTS ==========
