--- a/sass/utilities/_components.scss
+++ b/sass/utilities/_components.scss
@@ -498,7 +498,7 @@ body {
 					width: 15rem;
 					border-radius: 50%;
 					object-fit: cover;
-					border: 0.7rem solid $pure-white;
+					border: 0.7rem solid $main-colour;
 				}
 			}
 			&__content {
