--- a/sass/utilities/_medium.scss
+++ b/sass/utilities/_medium.scss
@@ -51,4 +51,35 @@
 			}
 		}
 	}
+
+	.reviews {
+		&__container {
+            margin: 8rem 0;
+			&__box {
+				margin: 6rem 2rem;
+				&__image {
+					&-img {
+						height: 20rem;
+						width: 20rem;
+					}
+				}
+				&__content {
+					&-title {font-size: 3.3rem;
+						padding: 2rem;
+					}
+					&-text {
+						font-size: 2rem;
+
+						padding: 2rem;
+					}
+					&__stars {
+						&-star {
+							font-size: 2.5rem;
+							padding: 3rem 0.2rem;
+						}
+					}
+				}
+			}
+		}
+	}
 }
